--- a/ClosetInventory/Views/Home/UserHomePage.cshtml
+++ b/ClosetInventory/Views/Home/UserHomePage.cshtml
@@ -49,7 +49,7 @@
 
 
             @Html.HiddenFor(model => model.Outfit.Id)
-            @Html.HiddenFor(model => model.Outfit.UserId)
+            @Html.HiddenFor(model => model.User.Id)
 
         </form>
 
