--- a/ClosetInventory/Views/Covers/Details.cshtml
+++ b/ClosetInventory/Views/Covers/Details.cshtml
@@ -54,7 +54,7 @@
 </div>
 
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "EditRedirect", new { id = Model.Id }) |
     @Html.ActionLink("Back to Closet", "UserHomePage", "Home") |
     @Html.ActionLink("Delete This Item", "Delete", "Covers") 
 </p>
