--- a/ClosetInventory/Views/Dresses/Edit.cshtml
+++ b/ClosetInventory/Views/Dresses/Edit.cshtml
@@ -14,7 +14,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
-
+        @Html.HiddenFor(model => model.LargeFile)
+        @Html.HiddenFor(model => model.SmallFile)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Dressiness, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -46,10 +47,6 @@
                 @Html.ValidationMessageFor(model => model.Color, "", new { @class = "text-danger" })
             </div>
         </div>
-        @Html.HiddenFor(model => model.LargeFile)
-        @Html.HiddenFor(model => model.SmallFile)
-        @Html.HiddenFor(model => model.UserId)
-        @Html.HiddenFor(model => model.lastWorn)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -60,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Closet", "UserHomePage", "Home")
 </div>
 
 @section Scripts {
