--- a/ClosetInventory/Views/Pants/Details.cshtml
+++ b/ClosetInventory/Views/Pants/Details.cshtml
@@ -56,5 +56,5 @@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to Closet", "UserHomePage", "Home")|
-    @Html.ActionLink("Delete This Item", "Delete", "Pants")
+    @Html.ActionLink("Delete This Item", "Delete", new { id = Model.Id } )
 </p>
