--- a/ClosetInventory/Views/Shared/_PartialUserHomePage.cshtml
+++ b/ClosetInventory/Views/Shared/_PartialUserHomePage.cshtml
@@ -22,7 +22,7 @@
         <div class="outfitCover">
             @if (Model.Outfit.Cover != null)
             {
-                <img id="outfit" src="@Model.Outfit.Cover.LargeFile" />
+                <img id="outfit" src="@Model.Outfit.Cover.LargeFile" style="max-height: 200px"/>
             }
         </div>
         <div id="outfitDress">
