--- a/ClosetInventory/Views/Covers/Details.cshtml
+++ b/ClosetInventory/Views/Covers/Details.cshtml
@@ -56,5 +56,5 @@
 <p>
     @Html.ActionLink("Edit", "EditRedirect", new { id = Model.Id }) |
     @Html.ActionLink("Back to Closet", "UserHomePage", "Home") |
-    @Html.ActionLink("Delete This Item", "Delete", "Covers") 
+    @Html.ActionLink("Delete This Item", "Delete", new { id = Model.Id } ) 
 </p>
