--- a/ClosetInventory/Views/Dresses/Details.cshtml
+++ b/ClosetInventory/Views/Dresses/Details.cshtml
@@ -56,6 +56,6 @@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to Closet", "UserHomePage", "Home") |
-    @Html.ActionLink("Delete This Item", "Delete", "Dresses")
+    @Html.ActionLink("Delete This Item", "Delete", new { id = Model.Id } )
     
 </p>
